tools/tests/errors/format_string_comma_flag.ki
# The ',' grouping flag is meaningless on a String; per docs, rejected.
discard format("x", ",")
